// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InkomenSpecificaties /> Jaaropgaven Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page OverviewPage InkomenSpecificaties SpecificationsTable--annualStatements"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Inkomen"
          class="ChapterIcon"
          fill="black"
        >
          inkomen.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Inkomen
        </a>
        <h2
          class="Heading Heading__large"
        >
          Bijstandsuitkering Jaaropgaven
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    />
    <section
      class="Section TableSection"
    >
      <h3
        class="Heading Heading__mediumLarge Title TitleWithItems"
      >
        Jaaropgaven
      </h3>
      <button
        aria-expanded="false"
        class="Button Button__secondary-inverted SearchButton"
      >
        Zoeken
        <i
          class="SearchButtonIcon"
        >
          ◢
        </i>
      </button>
      <table
        class="Table SpecificationsTable"
      >
        <thead>
          <tr
            class="TableRow"
          >
            <th
              class="DisplayProp"
            >
              Omschrijving
            </th>
            <th
              class="DisplayProp"
            >
              Datum
            </th>
            <th
              class="DisplayProp"
            >
              Documenten
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Jaaropgave
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                04 januari 2019
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=20021871&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Jaaropgave
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                04 januari 2019
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=20021871&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Jaaropgave
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                28 januari 2011
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=95330222&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Jaaropgave
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                28 januari 2011
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=95330222&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </main>
</DocumentFragment>
`;

exports[`<InkomenSpecificaties /> Uitkeringsspecificaties Matches the Full Page snapshot 1`] = `
<DocumentFragment>
  <main
    class="Page OverviewPage InkomenSpecificaties"
  >
    <header
      class="PageHeading hasIcon hasBackLink"
    >
      <span
        aria-hidden="true"
        class="Icon"
      >
        <svg
          aria-label="Inkomen"
          class="ChapterIcon"
          fill="black"
        >
          inkomen.svg
        </svg>
      </span>
      <div
        class="HeadingInner"
      >
        <a
          class="Button Button__plain Button__lean Linkd BackLink"
          href="/inkomen"
        >
          <svg
            aria-hidden="true"
            class="Icon Icon__left"
            fill="#000"
            height="14px"
            width="14px"
          >
            Chevron-Left.svg
          </svg>
          Inkomen
        </a>
        <h2
          class="Heading Heading__large"
        >
          Bijstandsuitkering 
        </h2>
      </div>
    </header>
    <div
      class="PageContent"
    />
    <section
      class="Section TableSection"
    >
      <h3
        class="Heading Heading__mediumLarge Title TitleWithItems"
      >
        Uitkeringsspecificaties
      </h3>
      <button
        aria-expanded="false"
        class="Button Button__secondary-inverted SearchButton"
      >
        Zoeken
        <i
          class="SearchButtonIcon"
        >
          ◢
        </i>
      </button>
      <table
        class="Table SpecificationsTable"
      >
        <thead>
          <tr
            class="TableRow"
          >
            <th
              class="DisplayProp"
            >
              Omschrijving
            </th>
            <th
              class="DisplayProp"
            >
              Regeling
            </th>
            <th
              class="DisplayProp"
            >
              Datum
            </th>
            <th
              class="DisplayProp"
            >
              Documenten
            </th>
          </tr>
        </thead>
        <tbody>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Regeling:
              </span>
              <span>
                Participatiewet
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                18 mei 2019
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=31569261&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Regeling:
              </span>
              <span>
                Bijzondere Bijstand
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                18 mei 2019
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=31569291&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Regeling:
              </span>
              <span>
                Bijzondere Bijstand
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                19 april 2019
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=24267671&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Regeling:
              </span>
              <span>
                Participatiewet
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                19 april 2019
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=24267681&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Regeling:
              </span>
              <span>
                Participatiewet
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                23 maart 2019
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=24078481&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Regeling:
              </span>
              <span>
                Bijzondere Bijstand
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                23 maart 2019
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=24078491&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
          <tr
            class="TableRow"
          >
            <td
              class="DisplayPropTitle"
            >
              Uitkeringsspecificatie
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Regeling:
              </span>
              <span>
                WWB
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Datum:
              </span>
              <span>
                18 januari 2014
              </span>
            </td>
            <td
              class="DisplayProp"
            >
              <span
                class="DisplayPropLabel"
              >
                Documenten:
              </span>
              <span
                class="DocumentLinkWrap"
              >
                <a
                  class="Button Button__plain Button__lean Linkd DocumentLink"
                  href="/test-api/focus/document?id=30032581&isBulk=false&isDms=false"
                >
                  <svg
                    aria-hidden="true"
                    class="Icon Icon__left"
                    fill="#000"
                    height="14px"
                    width="14px"
                  >
                    Download.svg
                  </svg>
                  PDF
                </a>
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </section>
  </main>
</DocumentFragment>
`;
